testing/tests/ui/filter_block_ws.stderr
error: failed to parse template source
 --> <source attribute>:1:27
       " %}\nHELLO\n{{v}}\n{%- endfilter %}"
 --> tests/ui/filter_block_ws.rs:4:12
  |
4 | #[template(source = "{% filter lower|indent(2) - %}
  |            ^^^^^^
